--- a/index.html
+++ b/index.html
@@ -24,22 +24,28 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <div class = "MainBox">
-    <div class = "card">
-      <div>
-        <form action="/submit" method="post">
-            <div class ="details">
-              <div class = "txt"><input type="text" placeholder="UserName"></div>
-              <div class = "txt"><input type="text" placeholder="Password"></div>
-              <div class = "submit"><button type="submit">Submit</button></div>
-            </div>
-        </form>
-      </div>
+<!-- Add your site or application content here -->
+<div class = "MainBox">
+  <div class = "card">
+    <div>
+      <form action="/submit" method="post">
+        <div class ="details">
+          <%if(stat === "show"){%>
+          <div class ="msg">Invalid Username or Password</div>
+          <%}%>
+          <div class = "txt"><input type="text" placeholder="UserName" name="UName" required></div>
+          <div><input class="pwd" type="password" placeholder="Password" name="pwd" required></div>
+          <div class = "submit"><button type="submit">Login</button></div>
+          <div class = "SignIn">Don't have an account?<a href="/register?msg">Register</a></div>
+        </div>
+      </form>
     </div>
   </div>
+</div>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src = "public/js/login.js"></script>
 </body>
 
 </html>
